--- a/styles/shared.css
+++ b/styles/shared.css
@@ -2,6 +2,7 @@ body{
     background-color: rgb(233, 217, 207);
     text-align: center;
     color: rgb(83, 75, 75);
+    margin: 50px;
 }
 
 h1{
@@ -10,8 +11,8 @@ h1{
 
 p{
     font-family: "Fira Sans", sans-serif;
+    font-size: 24px;
 }
-
 a {
     font-family: "Fira Sans", sans-serif;
     text-decoration: none;
